Partitial fix for cursor jumping around.

--- a/css/protael.css
+++ b/css/protael.css
@@ -1,3 +1,7 @@
+text
+{
+    pointer-events: none !important; 
+}
 .protael_toolbar {
     font-size: 75%;
     vertical-align: middle;
